--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 
     <section class="section">
         <header class="section__header">
-            <h2 class="section__title">Dodaj nowe zadanie</h2>
+            <h2 class="section__title">Dodaj zadanie</h2>
         </header>
         <div class="section__body">
             <form class="form js-form">
                 <input class="form__input js-newTask" placeholder="Co jest do zrobienia?" required autofocus>
-                <button class="form__button">Dodaj nowe zadanie</button>
+                <button class="form__button">Dodaj zadanie</button>
             </form>
         </div>
     </section>
 
     <section class="section">
-        <header class="section__header section__header--positionChanger">
-            <h2 class="section__title section__title--noneBorder">Lista zadań</h2>
+        <header class="section__header">
+            <h2 class="section__title">Lista zadań</h2>
             <div class="buttons js-buttons"></div>
         </header>
         <div class="section__body">
